--- a/Changes
+++ b/Changes
@@ -1,6 +1,13 @@
 NAME
     Net::Statsd::Server::Changes - Change history for Net::Statsd::Server
 
+  Changes in Net::Statsd::Server 0.05   16th January 2013
+      Improved UDP socket default settings to perform better.
+        In my tests, Net::Statsd::Server manages to successfully capture
+        almost twice the amount of UDP traffic (otherwise lost) than
+        the original node.js based statsd, with SO_RCVBUF = 8Mb.
+        I still have to experiment a bit more with this setting though.
+
   Changes in Net::Statsd::Server 0.04   15th January 2013
       Fixed statistics flush. When a flush is triggered, stats have
         to be cleared. The flush code wasn't doing this previously.
