--- a/lib/Net/Statsd/Server/Changes.pod
+++ b/lib/Net/Statsd/Server/Changes.pod
@@ -2,6 +2,16 @@
 
 Net::Statsd::Server::Changes - Change history for Net::Statsd::Server
 
+=head2 Changes in Net::Statsd::Server 0.06   17th January 2013
+
+  Added new File backend.
+    It allows to flush all aggregated stats to a given log file.
+
+  Added keyFlush implementation.
+    Allows to have the top n% (keyFlush.percent) dumped to a
+    log file (keyFlush.log) or stdout every y seconds
+    (keyFlush.interval).
+
 =head2 Changes in Net::Statsd::Server 0.05   16th January 2013
 
   Improved UDP socket default settings to perform better.
