--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
 NAME
     Net::Statsd::Server::Changes - Change history for Net::Statsd::Server
 
+  Changes in Net::Statsd::Server 0.14   25th April 2014
+      Fixed problem with gauges that were erroneously deleted either
+        when deleteIdleStats was false, or deleteIdleStats was true
+        but deleteGauges was false.
+
   Changes in Net::Statsd::Server 0.13   26th January 2014
       Added support for Perl 5.8, so now Net::Statsd::Server should
         in theory work on 5.8 too, thanks to RJBS for the related patch.
