--- a/lib/Net/Statsd/Server/Changes.pod
+++ b/lib/Net/Statsd/Server/Changes.pod
@@ -2,6 +2,12 @@
 
 Net::Statsd::Server::Changes - Change history for Net::Statsd::Server
 
+=head2 Changes in Net::Statsd::Server 0.16    6th May 2014
+
+  Implemented new timer attributes: count_ps, median, sum_squares.
+
+Release of 0.15 never happened.
+
 =head2 Changes in Net::Statsd::Server 0.14   25th April 2014
 
   Fixed problem with gauges that were erroneously deleted either
