Import of COSIMO/Net-Statsd-Server-0.17 from CPAN.
gitpan-cpan-distribution: Net-Statsd-Server
gitpan-cpan-version:      0.17
gitpan-cpan-path:         COSIMO/Net-Statsd-Server-0.17.tar.gz
gitpan-cpan-author:       COSIMO
gitpan-cpan-maturity:     released

--- a/lib/Net/Statsd/Server/Changes.pod
+++ b/lib/Net/Statsd/Server/Changes.pod
@@ -2,6 +2,11 @@
 
 Net::Statsd::Server::Changes - Change history for Net::Statsd::Server
 
+=head2 Changes in Net::Statsd::Server 0.17    13th June 2014
+
+  Fixed percentThreshold configuration directive. It was being ignored,
+    falling back to the default 90%. Added a new integration test case.
+
 =head2 Changes in Net::Statsd::Server 0.16    6th May 2014
 
   Implemented new timer attributes: count_ps, median, sum_squares.
